syntax = "proto3";

package MMORPG.Common.Proto.Fight;

enum AttackerType {
    Skill = 0;
}

message AttackerInfo {
	int32 attacker_id = 1;
	AttackerType attacker_type = 2;
	oneof attacker_value {
		int32 skill_id = 3;
	}
}

enum DamageType {
    UNKNOWN = 0;
    PHYSICAL = 1;       // 物理伤害
    MAGICAL = 2;        // 魔法伤害
    REAL = 3;           // 真实伤害
}

message DamageInfo {
    int32 target_id = 2;
    AttackerInfo attacker_info = 3;
    int32 amount = 4;
    DamageType damage_type = 5;
    bool is_crit = 6;
    bool is_miss = 7;
}

message EntityHurtResponse {
    DamageInfo info = 1;
}